Fix nav wrapping on homepage

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -76,7 +76,10 @@ nav {
     ul {
         margin: 0;
         line-height: 3em;
-        text-align: center;
+
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     li {
